--- a/style.css
+++ b/style.css
@@ -13,15 +13,15 @@ body {
 header.hero-section {
     background: #1b1b1b;
     color: #fff;
-    text-align: center;
-    padding: 4rem 2rem;
+    text-align: left;
+    padding: 2rem 1rem;
 }
 .logo {
     max-height: 400px;
     margin-bottom: 0rem;
 }
 h1 {
-    font-size: 2.5rem;
+    font-size: 1rem;
     margin-bottom: 0.5rem;
 }
 h2 {
