--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: #F5F5F5;
+  background: #e9e5f2;
   color: #1B1B1B;
 }
 
