--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ h2 {
 }
 .grid {
   display: grid;
-  grid-template-columns: repeat(3,autofit, minmax(220px, 1fr));
+  grid-template-columns: repeat(autofit, minmax(220px, 1fr));
   gap: 20px;
   margin-top: 30px;
 }
